--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "micro-route": "^2.5.0",
     "microrouter": "^3.1.3",
     "nuxt": "^2.4.0",
+    "nuxt-ts": "^2.5.1",
     "vuetify": "^1.5.5",
     "vuetify-loader": "^1.2.1"
   },
