--- a/package.json
+++ b/package.json
@@ -20,11 +20,11 @@
     "micro-route": "^2.5.0",
     "microrouter": "^3.1.3",
     "nuxt": "^2.4.0",
-    "nuxt-ts": "^2.5.1",
     "vuetify": "^1.5.5",
     "vuetify-loader": "^1.2.1"
   },
   "devDependencies": {
+    "@nuxt/typescript": "^2.5.1",
     "@nuxtjs/eslint-config": "^0.0.1",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-core": "7.0.0-bridge.0",
