--- a/package.json
+++ b/package.json
@@ -5,9 +5,9 @@
   "author": "akira satake",
   "private": true,
   "scripts": {
-    "dev": "cross-env NODE_ENV=development nodemon server/index.js --watch server",
+    "dev": "cross-env NODE_ENV=development nuxt",
     "build": "nuxt build",
-    "start": "cross-env NODE_ENV=production node server/index.js",
+    "start": "cross-env NODE_ENV=production nuxt start",
     "generate": "nuxt generate",
     "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
@@ -20,6 +20,7 @@
     "micro-route": "^2.5.0",
     "microrouter": "^3.1.3",
     "nuxt": "^2.4.0",
+    "nuxt-property-decorator": "^2.1.3",
     "vuetify": "^1.5.5",
     "vuetify-loader": "^1.2.1"
   },
