--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
   "devDependencies": {
     "@nuxt/typescript": "^2.5.1",
     "@nuxtjs/eslint-config": "^0.0.1",
+    "@types/webpack": "^4.4.26",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
