--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,7 +5,11 @@
     "target": "esnext",
     "module": "esnext",
     "moduleResolution": "node",
-    "lib": ["esnext", "esnext.asynciterable", "dom"],
+    "lib": [
+      "esnext",
+      "esnext.asynciterable",
+      "dom"
+    ],
     "esModuleInterop": true,
     "sourceMap": true,
     "strict": true,
@@ -13,9 +17,20 @@
     "noEmit": true,
     "baseUrl": ".",
     "paths": {
-      "~/*": ["./*"],
-      "@/*": ["./*"]
+      "~/*": [
+        "./*"
+      ],
+      "@/*": [
+        "./*"
+      ]
     },
-    "typeRoots": ["./node_modules/@types", "./node_modules/@nuxt/vue-app/types"]
+    "typeRoots": [
+      "./node_modules/@types",
+      "./node_modules/@nuxt/vue-app/types"
+    ],
+    "types": [
+      "@types/node",
+      "@nuxt/vue-app"
+    ]
   }
 }
