--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
     "nuxt": "^2.4.0",
     "nuxt-property-decorator": "^2.1.3",
     "vuetify": "^1.5.5",
-    "vuetify-loader": "^1.2.1"
+    "vuetify-loader": "^1.2.1",
+    "vuex-module-decorators": "^0.9.8"
   },
   "devDependencies": {
     "@nuxt/typescript": "^2.5.1",
