--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@nuxtjs/axios": "^5.3.6",
     "cross-env": "^5.2.0",
+    "date-fns": "^1.30.1",
     "micro": "^9.3.3",
     "micro-route": "^2.5.0",
     "microrouter": "^3.1.3",
