--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "build": "nuxt build",
     "start": "cross-env NODE_ENV=production nuxt start",
     "generate": "nuxt generate",
-    "lint": "eslint --ext .js,.vue --ignore-path .gitignore .",
+    "lint": "eslint --ext .ts,.vue --ignore-path .gitignore .",
     "precommit": "npm run lint",
     "test": "jest"
   },
@@ -23,19 +23,21 @@
     "nuxt": "^2.4.0",
     "nuxt-property-decorator": "^2.1.3",
     "ts-node": "^8.0.3",
-    "vuetify": "^1.5.5",
+    "vuetify": "^1.5.11",
     "vuetify-loader": "^1.2.1",
     "vuex-module-decorators": "^0.9.8"
   },
   "devDependencies": {
     "@nuxt/typescript": "^2.5.1",
     "@nuxtjs/eslint-config": "^0.0.1",
-    "@types/webpack": "^4.4.26",
+    "@types/webpack": "^4.4.27",
+    "@typescript-eslint/eslint-plugin": "^1.6.0",
+    "@typescript-eslint/parser": "^1.6.0",
     "@vue/test-utils": "^1.0.0-beta.27",
     "babel-core": "7.0.0-bridge.0",
     "babel-eslint": "^10.0.1",
-    "babel-jest": "^24.1.0",
-    "eslint": "^5.15.1",
+    "babel-jest": "^24.7.1",
+    "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-config-standard": ">=12.0.0",
     "eslint-loader": "^2.1.2",
@@ -44,11 +46,10 @@
     "eslint-plugin-node": ">=8.0.1",
     "eslint-plugin-nuxt": ">=0.4.2",
     "eslint-plugin-prettier": "^3.0.1",
-    "eslint-plugin-promise": ">=4.0.1",
+    "eslint-plugin-promise": ">=4.1.1",
     "eslint-plugin-standard": ">=4.0.0",
     "eslint-plugin-vue": "^5.2.2",
-    "jest": "^24.1.0",
-    "nodemon": "^1.18.9",
+    "jest": "^24.7.1",
     "prettier": "^1.16.4",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
