--- a/package.json
+++ b/package.json
@@ -22,10 +22,8 @@
     "microrouter": "^3.1.3",
     "nuxt": "^2.4.0",
     "nuxt-property-decorator": "^2.1.3",
-    "ts-node": "^8.0.3",
     "vuetify": "^1.5.11",
-    "vuetify-loader": "^1.2.1",
-    "vuex-module-decorators": "^0.9.8"
+    "vuetify-loader": "^1.2.1"
   },
   "devDependencies": {
     "@nuxt/typescript": "^2.5.1",
