--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "microrouter": "^3.1.3",
     "nuxt": "^2.4.0",
     "nuxt-property-decorator": "^2.1.3",
+    "ts-node": "^8.0.3",
     "vuetify": "^1.5.11",
     "vuetify-loader": "^1.2.1"
   },
