--- a/package.json
+++ b/package.json
@@ -23,12 +23,14 @@
     "nuxt": "^2.4.0",
     "nuxt-property-decorator": "^2.1.3",
     "ts-node": "^8.0.3",
+    "vuelidate": "^0.7.4",
     "vuetify": "^1.5.11",
     "vuetify-loader": "^1.2.1"
   },
   "devDependencies": {
     "@nuxt/typescript": "^2.5.1",
     "@nuxtjs/eslint-config": "^0.0.1",
+    "@types/vuelidate": "^0.7.4",
     "@types/webpack": "^4.4.27",
     "@typescript-eslint/eslint-plugin": "^1.6.0",
     "@typescript-eslint/parser": "^1.6.0",
