--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "microrouter": "^3.1.3",
     "nuxt": "^2.4.0",
     "nuxt-property-decorator": "^2.1.3",
+    "shortid": "^2.2.14",
     "ts-node": "^8.0.3",
     "vuelidate": "^0.7.4",
     "vuetify": "^1.5.11",
