--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
   "devDependencies": {
     "@nuxt/typescript": "^2.6.3",
     "@nuxtjs/eslint-config": "^0.0.1",
+    "@types/jest": "^24.0.12",
     "@types/vuelidate": "^0.7.5",
     "@types/webpack": "^4.4.31",
     "@typescript-eslint/eslint-plugin": "^1.8.0",
@@ -52,9 +53,11 @@
     "eslint-plugin-standard": ">=4.0.0",
     "eslint-plugin-vue": "^5.2.2",
     "jest": "^24.8.0",
+    "lodash": "^4.17.11",
     "prettier": "^1.17.0",
     "stylus": "^0.54.5",
     "stylus-loader": "^3.0.2",
+    "ts-jest": "^24.0.2",
     "vue-jest": "^3.0.3"
   }
 }
